--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -1,9 +1,15 @@
 <!--pages/me/me.wxml-->
 <view class="container">
+  <!--
   <view class="avatar">
     <image src="{{ avatar }}" />
   </view>
   <view class="name">{{ name }}</view>
+  -->
+  <view class="avatar">
+    <open-data type="userAvatarUrl"></open-data>
+  </view>
+  <view class="name"><open-data type="userNickName"></open-data></view>
   <!--
   <view class="item" data-target="user" bindtap="navTo">
     <text>个人信息</text>
@@ -26,4 +32,5 @@
     <input class = "weui-input" type = "text" value="{{ phone }}" bindblur = "changePhone" auto-focus placeholder-style="color:#F76260" placeholder = "请输入手机号" />
   </view>
   <text class="tip">填表之前请先完善基本信息~</text>
+  
 </view>
