--- a/pages/me/me.wxss
+++ b/pages/me/me.wxss
@@ -13,7 +13,7 @@
 
 .name {
   text-align: center;
-  color: #9B9B9B;
+  font-weight: bold;
   font-size: 40rpx;
   margin: 10rpx 0 60rpx;
 }
@@ -38,13 +38,15 @@
   display: flex;
   padding: 20rpx 0;
   border-bottom: 1rpx solid #DDD;
-  color: #9B9B9B;
   font-size: 30rpx;
   align-items: center;
 }
 
 .section text {
   flex: 1;
+  padding-left: 10rpx;
+  font-weight: bold;
+  border-left: 10rpx solid #7ED321;
 }
 
 .section input {
