--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -1,15 +1,40 @@
 <!--pages/me/me.wxml-->
-<view class="container">
-  <!--
+
+<!-- 当已经授权的时候 -->
+<!--
+<view wx:if="{{result == 'ok'}}" class="container">
   <view class="avatar">
-    <image src="{{ avatar }}" />
+    <image src="{{avatar}}"></image>
   </view>
-  <view class="name">{{ name }}</view>
-  -->
+  <view class="name">{{name}}</view>
+
+  <view class="section">
+    <text>姓名</text>
+    <input class = "weui-input" type = "text" value="{{ realname }}" bindblur = "changeRealName" auto-focus placeholder-style = "color:#F76260" placeholder = "请输入姓名" />
+  </view>
+  <view class="section">
+    <text>手机号</text>
+    <input class = "weui-input" type = "text" value="{{ phone }}" bindblur = "changePhone" auto-focus placeholder-style="color:#F76260" placeholder = "请输入手机号" />
+  </view>
+  <text class="tip">填表之前请先完善基本信息~</text>
+</view>
+-->
+
+<!-- 当未授权的时候 -->
+<!--
+<view wx:else class="result">
+   <view>未授权</view>
+   <button wx:if="{{canIUse}}" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo">授权登录</button>
+</view>
+-->
+
   <view class="avatar">
     <open-data type="userAvatarUrl"></open-data>
   </view>
-  <view class="name"><open-data type="userNickName"></open-data></view>
+  <view class="name">
+    <open-data type="userNickName"></open-data>
+  </view>
+  
   <!--
   <view class="item" data-target="user" bindtap="navTo">
     <text>个人信息</text>
@@ -20,7 +45,6 @@
     <text>→</text>
   </view>
   -->
-</view>
 
 <view class="container">
   <view class="section">
@@ -32,5 +56,4 @@
     <input class = "weui-input" type = "text" value="{{ phone }}" bindblur = "changePhone" auto-focus placeholder-style="color:#F76260" placeholder = "请输入手机号" />
   </view>
   <text class="tip">填表之前请先完善基本信息~</text>
-  
 </view>
