--- a/pages/tables/ipss/ipss.wxss
+++ b/pages/tables/ipss/ipss.wxss
@@ -28,6 +28,14 @@
   font-size: 32rpx;
   color: #333333;
   padding: 30rpx;
+  font-weight: bold;
+}
+.input_form_box .point_sum.data-v-25ef7a4a {
+  font-size: 32rpx;
+  color: #f73333;
+  padding: 30rpx;
+  font-weight: bold;
+  text-align: center;
 }
 .input_form_box .input_title.required.data-v-25ef7a4a::before {
   content: '*';
@@ -54,11 +62,18 @@
 }
 .input_form_box .input_box .name.data-v-25ef7a4a {
   font-size: 30rpx;
-  color: #666666;
   min-width: 120rpx;
   -webkit-flex-shrink: 0;
           flex-shrink: 0;
   padding: 30rpx 0;
+}
+.input_form_box .input_box .name.point.data-v-25ef7a4a {
+  font-size: 30rpx;
+  min-width: 120rpx;
+  -webkit-flex-shrink: 0;
+          flex-shrink: 0;
+  padding: 30rpx 0;
+  color: #f73333;
 }
 .input_form_box .input_box .name.required.data-v-25ef7a4a::before {
   content: '*';
@@ -196,8 +211,8 @@
 }
 .input_form_box .select_info .value.data-v-25ef7a4a {
   font-size: 30rpx;
-  color: #333;
   text-align: right;
+  color: #f73333;
 }
 .input_form_box .select_info .select.data-v-25ef7a4a {
   font-size: 30rpx;
